src/objects/Participant_Intern_Record__c.object
<CustomObject>
    <fields>
        <fullName>Program_Days_AFT_2nd_Sem__c</fullName>
        <formula>Program__r.Program_Days_AFT_2nd_Sem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Days AFT 2nd Sem</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Days_AFT_Total__c</fullName>
        <formula>Program__r.Program_Days_AFT_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Days AFT Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Days_SUM_Total__c</fullName>
        <formula>Program__r.Program_Days_SUM_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Days SUM Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Descriptor__c</fullName>
        <formula>Program__r.Program_Descriptor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Descriptor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Group__c</fullName>
        <formula>TEXT(Program__r.Program_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Location__c</fullName>
        <formula>TEXT (Program__r.Program_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <formula>TEXT (Program__r.Program_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Year__c</fullName>
        <formula>TEXT (Program__r.Program_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Participant/Intern Records</relationshipLabel>
        <relationshipName>Participant_Intern_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Projects_Completed__c</fullName>
        <label>Projects Completed</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reading_Summer_Assessment__c</fullName>
        <label>Reading Summer Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improved</fullName>
                </value>
                <value>
                    <fullName>Maintained</fullName>
                </value>
                <value>
                    <fullName>Decreased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sep_Days_Attended__c</fullName>
        <label>Sep Days Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sponsor_Church_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor Church Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sponsored Intern Records</relationshipLabel>
        <relationshipName>Participant_Intern_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summer_Attended_Pct__c</fullName>
        <formula>Summer_Days_Attended__c  /  Program_Days_SUM_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summer Attended Pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Summer_Days_Attended__c</fullName>
        <label>Summer Days Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summer_Fee__c</fullName>
        <label>Summer Fee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid in Full</fullName>
                </value>
                <value>
                    <fullName>Partial Payment</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_AFT_Attended_Pct__c</fullName>
        <formula>Total_AFT_Days_Attended__c / Program_AFT_Total_Days__c</formula>
        <label>Total AFT Attended Pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_AFT_Days_Attended__c</fullName>
        <formula>X1st_Sem_Days_Attended__c + X2nd_Sem_Days_Attended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total AFT Days Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Date__c</fullName>
        <label>Withdrawal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Notes__c</fullName>
        <label>Withdrawal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Reason__c</fullName>
        <label>Withdrawal Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Moved</fullName>
                </value>
                <value>
                    <fullName>Illness</fullName>
                </value>
                <value>
                    <fullName>Truancy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Behavior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Sem_Attended_Pct__c</fullName>
        <formula>X1st_Sem_Days_Attended__c / Program__r.Program_Days_AFT_1st_Sem__c</formula>
        <label>1st Sem Attended Pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X1st_Sem_Days_Attended__c</fullName>
        <formula>Aug_Days_Attended__c  + Sep_Days_Attended__c + Oct_Days_Attended__c + Nov_Days_Attended__c + Dec_Days_Attended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st Sem Days Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Attended_Pct__c</fullName>
        <formula>X2nd_Sem_Days_Attended__c  /  Program_Days_AFT_2nd_Sem__c</formula>
        <label>2nd Sem Attended Pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Days_Attended__c</fullName>
        <formula>Jan_Days_Attended__c + Feb_Days_Attended__c + Mar_Days_Attended__c + Apr_Days_Attended__c + May_Days_Attended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd Sem Days Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Participant/Intern Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Americorps_Age_Group_Interns__c</columns>
        <columns>Program_Group__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Location__c</columns>
        <columns>Program_Year__c</columns>
        <columns>Status__c</columns>
        <columns>Grade__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Participant</fullName>
        <columns>NAME</columns>
        <columns>Program_Location__c</columns>
        <columns>Summer_Fee__c</columns>
        <columns>Summer_Days_Attended__c</columns>
        <columns>Summer_Attended_Pct__c</columns>
        <columns>Program_Days_SUM_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>Participants 2017</label>
    </listViews>
    <nameField>
        <displayFormat>PRID-{000000}</displayFormat>
        <label>Participant/Intern Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant/Intern Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>